lab05-managing-routes/route_jenkins.yaml
apiVersion: v1
kind: Route
metadata:
  name: jenkins
spec:
  host: jenkins.apps.172.24.0.11.nip.io
  to:
    kind: Service
    name: jenkins
