lab05-managing-routes/ssl_route_jenkins.yaml
apiVersion: v1
kind: Route
metadata:
  name: jenkins-ssl
  labels:
    encrypted: 'true'
spec:
  host: jenkins-ssl.apps.172.24.0.11.nip.io
  to:
    kind: Service
    name: jenkins
  tls:
    termination: edge
